# NeuralNapkin

./: .gitignore  README.md
server/: pyproject.toml
server/app/: job.py  main.py  utils.py
